# nu_plugin_dotenv

./: Cargo.toml  LICENSE  README.md
src/: dotenv.rs  lib.rs  main.rs  plugin.rs
